# drf-hello

./: .gitignore  Justfile  manage.py  openapi.yaml  pyproject.toml  test.py
drf_hello/: asgi.py  settings.py  urls.py  wsgi.py
drf_hello/auth/: urls.py  views.py
drf_hello/quickstart/: views.py
